# StarioDemo

./: chat.db  main.py  pyproject.toml  ruff.toml
.scripts/: UvRunWatchFiles.cmd
src/stariodemo/DataBasePkg/: db.py
src/stariodemo/DataStructsPkg/: AdjectivesModule.py  AnimalsModule.py  ColorsModule.py  GenerateColorModule.py  GenerateUserNameModule.py  MessageModule.py  UrlsModule.py  UserModule.py  __init__.py
src/stariodemo/HandlersPkg/: AbcAddPageEndpointModule.py  AbcCalculationPageEndpointModule.py  AbcListPageEndpointModule.py  ChatPageEndpointModule.py  HomeModule.py  HomePageEndpointModule.py  SendMessageModule.py  SubscribeModule.py  TypingModule.py  XyzAddPageEndpointModule.py  XyzListPageEndpointModule.py
src/stariodemo/HtmlComponentsPkg/: FooterBarModule.py  IconAlertTriangleIconModule.py  InfoCircleIconModule.py  MessageBoxModule.py  MoodHappyIconModule.py  MoodSadIconModule.py  NavBarButtonModule.py  NavBarModule.py  PageModule.py  PlaneIconModule.py  SideBarButtonModule.py  SideBarModule.py
src/stariodemo/HtmlIconsPkg/: PlaneIconModule.py  UserIcon.py  __init__.py
src/stariodemo/HtmlViewsPkg/: AbcAddViewModule.py  AbcCalculationViewModule.py  AbcListViewModule.py  AbcSidebarViewModule.py  ChatViewModule.py  HomeViewModule.py  LeftSidebarAndContentViewModule.py  LeftSidebarViewModule.py  MessageViewModule.py  MessagesViewModule.py  NavBarAndFooterViewModule.py  XyzAddViewModule.py  XyzListViewModule.py  XyzSidebarViewModule.py  __init__.py
src/stariodemo/ViewsPkg/: ChatViewModule.py  InputFormViewModule.py  (+6 more)
static/css/: style.css
